# WiFi_Drone

./: .cproject  .project  CMakeLists.txt  README.md  camera_pins.h  sdkconfig
main/: CMakeLists.txt  main.c
main/inc/: camera.h  camera_pins.h  driver.h  http_server.h  led.h  rgb_led.h  tasks_common.h  wifi_app.h
main/src/: camera.c  driver.c  http_server.c  led.c  rgb_led.c  wifi_app.c
main/webpage/: app.css  app.js  index.html
